[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Mikhail Ermakov <m.k.ermakov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"

[tool.black]
line-length = 79

[tool.poetry.scripts]
solve = "aoc2023.utils.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
